--- a/.env.production
+++ b/.env.production
@@ -50,7 +50,7 @@ EU_COVID_CERT_ENABLED=YES
 # SiciliaVola configuration
 SICILIAVOLA_ENABLED=NO
 # Zendesk configuration
-ZENDESK_ENABLED=NO
+ZENDESK_ENABLED=YES
 # CGN new merchants features
 CGN_MERCHANTS_V2_ENABLED=NO
 # Opt-in payments method
