chore: [IOBP-319] Add new wallet payment redux and saga (#5261)
## Short description
This PR introduces the reducer and networking sagas to handle the new
wallet payment flow.
The flow covers only the happy path and displays the store content in
the screens.
**Note:** the authorization process is not covered by this
implementation and will be handled in
[IOBP-432](https://pagopa.atlassian.net/browse/IOBP-432)


https://github.com/pagopa/io-app/assets/6160324/201e42e4-13ad-465c-a5a3-8bd517c11cb2


## List of changes proposed in this pull request
- Added Wallet eCommerce API definitons url and script in `package.json`
- Added `DebugPrettyPrint`, an utility component to display the content
of any object in a pleasant and readable way.
- Renamed `WALLET_API_BASEURL` and `WALLET_API_UAT_BASEURL` in
`.env.local`, `.env.production` and `config.ts` files
- Moved barcode scan files from `ts/features/walletV3/payment` into
dedicated subfolder in `ts/features/walletV3/barcode`
- Added client, saga and reducer for Wallet eCommerce
- Added barebone logic into wallet payment flow

## How to test
Go to **Profile > New Wallet Playground > Payment Playground** using the
`io-dev-api-server` as the backend. Just make sure to checkout this
branch: https://github.com/pagopa/io-dev-api-server/pull/322 and set the
following in the config.json

```json
  "wallet": {
    "useLegacyRptIdVerificationSystem": true
  }
```


[IOBP-432]:
https://pagopa.atlassian.net/browse/IOBP-432?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

---------

Co-authored-by: Martino Cesari Tomba <60693085+forrest57@users.noreply.github.com>

--- a/.env.local
+++ b/.env.local
@@ -74,7 +74,7 @@ IDPAY_ENABLED=YES
 # IDPay RESTful API
 IDPAY_API_BASEURL='http://127.0.0.1:3000'
 # IDPay test/env RESTful API
-IDPAY_API_UAT_BASEURL='http://127.0.0.1:3000'
+IDPAY_API_UAT_BASEURL='https://api-io.uat.cstar.pagopa.it'
 # Unsupported device more information url
 UNSUPPORTED_DEVICE_MORE_INFO_URL='https://io.italia.it/app-content/unsupported_device.html'
 # Unsupported device learn more url
@@ -91,13 +91,13 @@ NATIVE_LOGIN_ENABLED=YES
 FAST_LOGIN_MAX_RETRIES=3
 # Fast login opt-in
 FAST_LOGIN_OPTIN=NO
-# Wallet V3 RESTful API
-WALLETV3_API_BASEURL='http://127.0.0.1:3000'
-# Wallet V3 test/env RESTful API
-WALLETV3_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
 # Enable CIE login flow with emulator and dev server
 CIE_LOGIN_WITH_DEV_SERVER_ENABLED=NO
 # Enable CDU flow new screen
 CDU_NEW_FLOW=NO
 # Relay State for SPID
 SPID_RELAY_STATE='appio-dev'
+# Wallet V3 RESTful API
+WALLET_API_BASEURL='http://127.0.0.1:3000'
+# Wallet V3 test/env RESTful API
+WALLET_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
