--- a/.env.production
+++ b/.env.production
@@ -91,13 +91,13 @@ NATIVE_LOGIN_ENABLED=NO
 FAST_LOGIN_MAX_RETRIES=3
 # Fast login bypass opt-in
 FAST_LOGIN_OPTIN=NO
-# Wallet V3 RESTful API - TODO: To define when the API will be available
-WALLETV3_API_BASEURL='http://127.0.0.1:3000'
-# Wallet V3 test/env RESTful API
-WALLETV3_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
 # Enable CIE login flow with emulator and dev server
 CIE_LOGIN_WITH_DEV_SERVER_ENABLED=NO
 # Enable CDU flow new screen
 CDU_NEW_FLOW=NO
 # Relay State for SPID
 SPID_RELAY_STATE='appio'
+# Wallet RESTful API
+WALLET_API_BASEURL='https://api.platform.pagopa.it'
+# Wallet test/env RESTful API
+WALLET_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
