--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "@pagopa/io-react-native-crypto": "^0.2.1",
     "@pagopa/io-react-native-jwt": "1.1.0",
     "@pagopa/io-react-native-login-utils": "^0.2.0",
-    "@pagopa/io-react-native-proximity": "^0.1.0",
+    "@pagopa/io-react-native-proximity": "^0.1.6",
     "@pagopa/io-react-native-wallet": "^0.10.2",
     "@pagopa/react-native-cie": "1.2.0",
     "@pagopa/react-native-nodelibs": "^0.1.0",
@@ -230,6 +230,7 @@
     "rn-qr-generator": "^1.3.0",
     "semver": "^5.7.2",
     "sha.js": "^2.4.11",
+    "text-encoding-polyfill": "^0.6.7",
     "tslib": "^1.9.3",
     "typed-redux-saga": "^1.4.0",
     "typesafe-actions": "4.4.2",
