--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "@pagopa/io-react-native-crypto": "^0.2.1",
     "@pagopa/io-react-native-jwt": "1.1.0",
     "@pagopa/io-react-native-login-utils": "^0.2.0",
+    "@pagopa/io-react-native-proximity": "^0.1.6",
     "@pagopa/io-react-native-wallet": "^0.11.1",
     "@pagopa/react-native-cie": "1.2.0",
     "@pagopa/react-native-nodelibs": "^0.1.0",
@@ -165,6 +166,7 @@
     "react-native-android-open-settings": "^1.3.0",
     "react-native-background-timer": "2.1.1",
     "react-native-barcode-builder": "^2.0.0",
+    "react-native-ble-manager": "^10.1.5",
     "react-native-blob-util": "0.15.0",
     "react-native-calendar-events": "2.2.0",
     "react-native-config": "^1.4.5",
@@ -204,6 +206,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^2.x",
+    "react-native-uuid": "^2.0.1",
     "react-native-view-shot": "3.1.2",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.26.1",
@@ -227,6 +230,7 @@
     "rn-qr-generator": "^1.3.0",
     "semver": "^5.7.2",
     "sha.js": "^2.4.11",
+    "text-encoding-polyfill": "^0.6.7",
     "tslib": "^1.9.3",
     "typed-redux-saga": "^1.4.0",
     "typesafe-actions": "4.4.2",
@@ -323,6 +327,12 @@
     "@codler/react-native-keyboard-aware-scroll-view": "2.0.1",
     "@types/react": "16.7.18",
     "@types/prop-types": "15.5.5"
+  },
+  "react-native": {
+    "path": "path-browserify"
+  },
+  "browser": {
+    "path": "path-browserify"
   },
   "repository": {
     "type": "git",
