--- a/ios/ItaliaApp/Info.plist
+++ b/ios/ItaliaApp/Info.plist
@@ -62,9 +62,9 @@
     <key>NSAppleMusicUsageDescription</key>
     <string>The app needs NSAppleMusicUsageDescription permission</string>
     <key>NSBluetoothAlwaysUsageDescription</key>
-    <string>The app needs NSBluetoothAlwaysUsageDescription permission</string>
+    <string>IO needs access to Bluetooth to allow you to search and exchange data with the verification app</string>
     <key>NSBluetoothPeripheralUsageDescription</key>
-    <string>The app needs NSBluetoothPeripheralUsageDescription permission</string>
+    <string>IO need access to Bluetooth to allow you to search and exchange data with the verification app</string>
     <key>NSCalendarsUsageDescription</key>
     <string>So that you’ll be able to add deadlines to your calendar and set a reminder.</string>
     <key>NSCameraUsageDescription</key>
@@ -89,6 +89,8 @@
     <string>You’ll be able to save bonuses, certificates and upload screenshots or payment notices.</string>
     <key>NSSpeechRecognitionUsageDescription</key>
     <string>The app needs NSSpeechRecognitionUsageDescription permission</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>Our app uses bluetooth to find, connect and transfer data between different devices</string>
     <key>UIAppFonts</key>
     <array>
       <string>TitilliumWeb-Black.ttf</string>
