chore: move credential issuer url to config.ts

--- a/.env.production
+++ b/.env.production
@@ -111,3 +111,5 @@ IT_WALLET_EXPERIMENTAL_ENABLED=NO
 IT_WALLET_WP_URL='https://io-d-wallet-it.azurewebsites.net'
 # IT-WALLET PID PROVIDER URL 
 IT_WALLET_PID_PROVIDER_URL='https://api.eudi-wallet-it-pid-provider.it/ci'
+# IT-WALLET CREDENTIAL PROVIDER URL
+IT_WALLET_CREDENTIAL_PROVIDER_URL='https://api.eudi-wallet-it-issuer.it/rp'
