--- a/package.json
+++ b/package.json
@@ -128,10 +128,10 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "^2.4.1",
-    "@react-navigation/bottom-tabs": "^5.11.15",
-    "@react-navigation/material-top-tabs": "^5.x",
-    "@react-navigation/native": "^5.9.8",
-    "@react-navigation/stack": "^5.14.9",
+    "@react-navigation/bottom-tabs": "^6.x",
+    "@react-navigation/material-top-tabs": "^6.x",
+    "@react-navigation/native": "^6.x",
+    "@react-navigation/stack": "^6.x",
     "@redux-saga/testing-utils": "^1.1.3",
     "@xstate/react": "^3.0.1",
     "abort-controller": "^1.0.2",
@@ -201,7 +201,7 @@
     "react-native-share": "7.3.9",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.3.0",
-    "react-native-tab-view": "^2.x",
+    "react-native-tab-view": "^3.x",
     "react-native-view-shot": "3.1.2",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.26.1",
