Revert "fix: build issues"
This reverts commit 83ad5a010f639d90729bff30ae603ec2ff3f10c2.

--- a/package.json
+++ b/package.json
@@ -185,7 +185,6 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-mixpanel": "1.2.0",
     "react-native-modal-datetime-picker": "^10.2.0",
-    "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.4.0",
     "react-native-pdf-thumbnail": "^1.2.1",
     "react-native-permissions": "^4.0.0",
@@ -202,7 +201,7 @@
     "react-native-share": "7.3.9",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.3.0",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view": "^3.x",
     "react-native-view-shot": "3.1.2",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.26.1",
