--- a/package.json
+++ b/package.json
@@ -185,6 +185,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-mixpanel": "1.2.0",
     "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.4.0",
     "react-native-pdf-thumbnail": "^1.2.1",
     "react-native-permissions": "^4.0.0",
