--- a/package.json
+++ b/package.json
@@ -128,10 +128,10 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "^2.4.1",
-    "@react-navigation/bottom-tabs": "^6.x",
-    "@react-navigation/material-top-tabs": "^6.x",
-    "@react-navigation/native": "^6.x",
-    "@react-navigation/stack": "^6.x",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/material-top-tabs": "6.6.5",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
     "@xstate/react": "^3.0.1",
     "abort-controller": "^1.0.2",
@@ -202,7 +202,7 @@
     "react-native-share": "7.3.9",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.3.0",
-    "react-native-tab-view": "^3.x",
+    "react-native-tab-view": "3.5.2",
     "react-native-view-shot": "3.1.2",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.26.1",
@@ -239,7 +239,7 @@
     "xstate": "^4.33.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.18.8",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.15.3",
     "@jambit/eslint-plugin-typed-redux-saga": "^0.4.0",
@@ -299,7 +299,7 @@
     "js-yaml": "^3.13.1",
     "jsdoc-to-markdown": "^6.0.1",
     "lint-staged": "^13.2.0",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "metro-react-native-babel-preset": "^0.73.0",
     "mockdate": "^3.0.2",
     "mockttp": "2.4.0",
     "node-fetch": "^2.6.7",
