--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "@react-navigation/bottom-tabs": "6.5.11",
     "@react-navigation/material-top-tabs": "6.6.5",
     "@react-navigation/native": "6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
     "@xstate/react": "^3.0.1",
@@ -197,7 +198,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen-brightness": "^2.0.0-alpha",
-    "react-native-screens": "^2.18.1",
+    "react-native-screens": "^3.29.0",
     "react-native-sha256": "1.2.3",
     "react-native-share": "7.3.9",
     "react-native-splash-screen": "^3.2.0",
