removed API endpoints and naming here and there

--- a/.env.production
+++ b/.env.production
@@ -36,10 +36,8 @@ MIXPANEL_TOKEN='0cb505dace6f4b3ceb9e17c7fcd7c66f'
 MYPORTAL_ENABLED=NO
 # enable playgrounds inside developer section
 PLAYGROUNDS_ENABLED=YES
-# endpoint BPD API
-BPD_API_URL_PREFIX=https://api-io.cstar.pagopa.it
-BPD_API_SIT='https://api-io.dev.cstar.pagopa.it'
-BPD_API_UAT='https://api-io.uat.cstar.pagopa.it'
+# endpoint BPD/BONUS API
+BONUS_API_URL_PREFIX=https://api-io.cstar.pagopa.it
 # local services web url
 LOCAL_SERVICE_WEB_URL='https://io.italia.it/app-content/enti-servizi.html'
 # EU Covid Certificate
