Added E2E tests failure reporter

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,4 +1,6 @@
 name: Run e2e tests
+env:
+  IO_APP_SLACK_HELPER_BOT_TOKEN: ${{ secrets.IO_APP_SLACK_HELPER_BOT_TOKEN }}
 on:
   push:
     branches:
@@ -9,6 +11,7 @@ jobs:
   run-e2e-test-ios:
     needs: run-static-checks
     runs-on: macos-latest
+    environment: dev
     concurrency:
       group: ${{ github.workflow }}-e2e-tests-${{ github.head_ref || github.run_id }}
       cancel-in-progress: true
@@ -60,6 +63,9 @@ jobs:
           path: './_io-dev-api-server_'
       - id: run-e2e-tests
         run: bash ./.github/scripts/run-e2e-tests.sh
+      - id: notify-test-failure
+        if: failure()
+        uses: ./.github/actions/notify-e2e
       - id: upload-artifacts
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v.3.1.2
         if: always()
