--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -6,10 +6,10 @@ on:
     branches:
       - features/e2eReporter
 jobs:
-  run-static-checks:
-    uses: ./.github/workflows/staticcheck.yaml
+  # run-static-checks:
+  #  uses: ./.github/workflows/staticcheck.yaml
   run-e2e-test-ios:
-    needs: run-static-checks
+    # needs: run-static-checks
     runs-on: macos-latest
     environment: dev
     concurrency:
