reverted .env changes

--- a/.env.production
+++ b/.env.production
@@ -38,6 +38,8 @@ MYPORTAL_ENABLED=NO
 PLAYGROUNDS_ENABLED=YES
 # endpoint BPD/BONUS API
 BONUS_API_URL_PREFIX=https://api-io.cstar.pagopa.it
+BONUS_API_SIT='https://api-io.dev.cstar.pagopa.it'
+BONUS_API_UAT='https://api-io.uat.cstar.pagopa.it'
 # local services web url
 LOCAL_SERVICE_WEB_URL='https://io.italia.it/app-content/enti-servizi.html'
 # EU Covid Certificate
