--- a/.env.local
+++ b/.env.local
@@ -38,6 +38,8 @@ MYPORTAL_ENABLED=NO
 PLAYGROUNDS_ENABLED=YES
 # endpoint BPD/BONUS API
 BONUS_API_URL_PREFIX='http://127.0.0.1:3000/bonus'
+BONUS_API_SIT='https://api-io.dev.cstar.pagopa.it'
+BONUS_API_UAT='https://api-io.uat.cstar.pagopa.it'
 # local services web url
 LOCAL_SERVICE_WEB_URL='http://127.0.0.1:3000/services_web_view'
 # EU Covid Certificate
