--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "@pagopa/io-app-design-system": "1.20.1",
     "@pagopa/io-pagopa-commons": "^3.1.0",
     "@pagopa/io-react-native-crypto": "^0.2.1",
-    "@pagopa/io-react-native-login-utils": "^0.2.2",
+    "@pagopa/io-react-native-login-utils": "https://github.com/pagopa/io-react-native-login-utils.git#iowallet-test",
     "@pagopa/react-native-cie": "1.2.0",
     "@pagopa/ts-commons": "^10.15.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
