--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@pagopa/io-pagopa-commons": "^3.1.0",
     "@pagopa/io-react-native-crypto": "^0.2.1",
     "@pagopa/io-react-native-login-utils": "^0.2.2",
+    "@pagopa/io-react-native-zendesk": "^0.3.28",
     "@pagopa/react-native-cie": "1.2.0",
     "@pagopa/ts-commons": "^10.15.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
@@ -126,7 +127,6 @@
     "front-matter": "^4.0.2",
     "hastscript": "^7.0.2",
     "hoist-non-react-statics": "^3.0.1",
-    "io-react-native-zendesk": "https://github.com/pagopa/io-react-native-zendesk.git#0.3.25",
     "io-ts": "^2.2.16",
     "jail-monkey": "^2.3.2",
     "jwk-thumbprint": "^0.1.4",
