chore(Firma con IO): [SFEQS-2099] Update`Firma con IO` specs (#5473)
## Short description
This PR update Firma con IO definitions to avoid an error on 401
response body decoding.

## List of changes proposed in this pull request
- Update package.json

## How to test
Static checks should be enough.

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "italia-app",
-  "version": "2.52.0-rc.0",
-  "io_backend_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_backend.yaml",
-  "io_public_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_public.yaml",
+  "version": "2.52.0-rc.1",
+  "io_backend_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_backend.yaml",
+  "io_public_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_public.yaml",
   "io_content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.30/definitions.yml",
-  "io_cgn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_cgn.yaml",
+  "io_cgn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_cgn.yaml",
   "io_cgn_merchants_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.29.2-RELEASE/api_cgn_operator_search.yaml",
-  "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_io_sign.yaml",
-  "io_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_eucovidcert.yaml",
-  "io_pn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_pn.yaml",
-  "io_consumed_pn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/openapi/consumed/api-piattaforma-notifiche.yaml",
+  "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_io_sign.yaml",
+  "io_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_eucovidcert.yaml",
+  "io_sicilia_vola_token": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_mit_voucher.yaml",
+  "io_pn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_pn.yaml",
+  "io_consumed_pn_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/openapi/consumed/api-piattaforma-notifiche.yaml",
   "api_cdc": "assets/CdcSwagger.yml",
   "pagopa_api": "assets/paymentManager/spec.json",
   "pagopa_api_walletv2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.30/bonus/specs/bpd/pm/walletv2.json",
   "pagopa_cobadge_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.30/pagopa/cobadge/abi_definitions.yml",
   "pagopa_privative_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.30/pagopa/privative/definitions.yml",
   "idpay_api": "https://raw.githubusercontent.com/pagopa/cstar-infrastructure/v6.9.1/src/domains/idpay-app/api/idpay_appio_full/openapi.appio.full.yml",
-  "lollipop_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/api_lollipop_first_consumer.yaml",
-  "fast_login_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.25.1-RELEASE/openapi/generated/api_fast_login.yaml",
+  "lollipop_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/api_lollipop_first_consumer.yaml",
+  "fast_login_api": "https://raw.githubusercontent.com/pagopa/io-backend/v13.32.1-RELEASE/openapi/generated/api_fast_login.yaml",
   "pagopa_api_walletv3": "https://raw.githubusercontent.com/pagopa/pagopa-infra/740e7dcc5ea2ea19639316fea6797bbd504dd0ae/src/domains/wallet-app/api/payment-wallet/v1/_openapi.json.tpl",
   "pagopa_api_ecommerce": "https://raw.githubusercontent.com/pagopa/pagopa-infra/a5299db39de86a951d353fdc2bfed48188c0c125/src/domains/ecommerce-app/api/ecommerce-io/v1/_openapi.json.tpl",
   "private": true,
