--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@pagopa/io-pagopa-commons": "^3.1.0",
     "@pagopa/io-react-native-crypto": "^0.2.1",
     "@pagopa/io-react-native-login-utils": "^0.2.2",
-    "@pagopa/io-react-native-zendesk": "^0.3.28",
+    "@pagopa/io-react-native-zendesk": "https://github.com/pagopa/io-react-native-zendesk.git#IOPLT-327-upgrade-zendesk-sdk-",
     "@pagopa/react-native-cie": "1.2.0",
     "@pagopa/ts-commons": "^10.15.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
