--- a/package.json
+++ b/package.json
@@ -110,10 +110,10 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "^2.4.1",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/material-top-tabs": "6.6.5",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
     "@xstate/react": "^3.0.1",
     "async-mutex": "^0.1.3",
@@ -175,14 +175,14 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-render-html": "^6.3.1",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screen-brightness": "^2.0.0-alpha",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "^2.18.1",
     "react-native-sha256": "1.2.3",
     "react-native-share": "7.3.9",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.3.0",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view": "3.5.2",
     "react-native-view-shot": "3.1.2",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.26.1",
