--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -2,12 +2,9 @@ name: Run e2e tests
 on:
   push:
     branches:
-      - master
+      - feature/e2eSplit
 jobs:
-  run-static-checks:
-    uses: ./.github/workflows/staticcheck.yaml
   run-e2e-test-ios:
-    needs: run-static-checks
     runs-on: macos-latest
     environment: dev
     concurrency:
