--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -2,9 +2,12 @@ name: Run e2e tests
 on:
   push:
     branches:
-      - feature/e2eSplit
+      - master
 jobs:
+  run-static-checks:
+    uses: ./.github/workflows/staticcheck.yaml
   run-e2e-test-ios:
+    needs: run-static-checks
     runs-on: macos-latest
     environment: dev
     concurrency:
