--- a/.env.local
+++ b/.env.local
@@ -83,11 +83,11 @@ NATIVE_LOGIN_ENABLED=YES
 # Fast login max retries
 FAST_LOGIN_MAX_RETRIES=3
 # Fast login opt-in
-FAST_LOGIN_OPTIN=NO
+FAST_LOGIN_OPTIN=YES
 # Enable CIE login flow with emulator and dev server
 CIE_LOGIN_WITH_DEV_SERVER_ENABLED=NO
 # Enable CDU flow new screen
-CDU_NEW_FLOW=NO
+CDU_NEW_FLOW=YES
 # Relay State for SPID
 SPID_RELAY_STATE='appio-dev'
 # Wallet V3 RESTful API
