--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@pagopa/io-app-design-system": "1.25.0",
     "@pagopa/io-pagopa-commons": "^3.1.0",
     "@pagopa/io-react-native-crypto": "^0.2.1",
+    "@pagopa/io-react-native-http-client": "^0.1.3",
     "@pagopa/io-react-native-login-utils": "^1.0.0",
     "@pagopa/io-react-native-zendesk": "^0.3.29",
     "@pagopa/react-native-cie": "1.2.0",
