--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,6 +55,16 @@ target 'ItaliaApp' do
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
+        if target.name == 'Flipper'
+          file_path = 'Pods/Flipper/xplat/Flipper/FlipperTransportTypes.h'
+          contents = File.read(file_path)
+          unless contents.include?('#include <functional>')
+            File.open(file_path, 'w') do |file|
+              file.puts('#include <functional>')
+              file.puts(contents)
+            end
+          end
+        end        
         # This is needed in order to build the project on Apple silicon.
       	# Beware that after this modification you need Rosetta to run the app 
       	# on the simulator.
