--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,9 +1,6 @@
 name: Run e2e tests
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - master
+  pull_request
 jobs:
   run-static-checks:
     uses: ./.github/workflows/staticcheck.yaml
@@ -33,8 +30,6 @@ jobs:
         with:
           path: ios/Pods
           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
       - id: install-detox
         run: |
           brew tap wix/brew
@@ -47,8 +42,6 @@ jobs:
         with:
           path: ios/build
           key: ${{ runner.os }}-detox-build
-          restore-keys: |
-            ${{ runner.os }}-detox-build
       - id: setup-pods
         run: cd ios ; bundle exec pod install --verbose ; cd ..
         shell: bash
