--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,11 +1,14 @@
 name: Run e2e tests
 on:
-  pull_request
+  workflow_dispatch:
+  push:
+    branches:
+      - master
 jobs:
   run-static-checks:
     uses: ./.github/workflows/staticcheck.yaml
   run-e2e-test-ios:
-    # needs: run-static-checks
+    needs: run-static-checks
     runs-on: macos-latest
     environment: dev
     concurrency:
