--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "jwk-thumbprint": "^0.1.4",
     "lodash": "^4.17.21",
     "metro-babel-register": "^0.72.1",
+    "mixpanel-react-native": "2.4.1",
     "native-base": "^2.15.2",
     "native-base-shoutem-theme": "0.3.1",
     "pako": "^2.1.0",
@@ -162,7 +163,6 @@
     "react-native-keychain": "^4.0.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
-    "react-native-mixpanel": "1.2.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.4.0",
     "react-native-pdf-thumbnail": "^1.2.1",
