--- a/.env.local
+++ b/.env.local
@@ -94,3 +94,5 @@ SPID_RELAY_STATE='appio-dev'
 WALLET_API_BASEURL='http://127.0.0.1:3000'
 # Wallet V3 test/env RESTful API
 WALLET_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
+# Redesign of the services section
+NEW_SERVICES_ENABLED=YES
