--- a/.env.production
+++ b/.env.production
@@ -94,3 +94,5 @@ SPID_RELAY_STATE='appio'
 WALLET_API_BASEURL='https://api.platform.pagopa.it'
 # Wallet test/env RESTful API
 WALLET_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
+# Redesign of the services section
+NEW_SERVICES_ENABLED=NO
