--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,18 +102,18 @@ jobs:
           name: ItaliaApp.app.dSYM.zip
           path: ios/ItaliaApp.app.dSYM.zip
           retention-days: 60        
-  notify-new-version:
-    environment: dev
-    runs-on: ubuntu-latest
-    needs:
-        - release-android
-        - release-ios
-    steps:
-      - id: checkout
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab #v3.5.2
-      - id: setup-node
-        uses: ./.github/actions/setup-composite
-      - id: send-notification
-        run: 'yarn ts-node --skip-project -O ''{"lib":["es2015"]}'' scripts/ts/notifyNewAppVersion/notifyNewAppVersion.ts'
-        env: 
-          IO_APP_SLACK_HELPER_BOT_TOKEN: ${{ secrets.IO_APP_SLACK_HELPER_BOT_TOKEN }}
+  # notify-new-version:
+  #   environment: dev
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #       - release-android
+  #       - release-ios
+  #   steps:
+  #     - id: checkout
+  #       uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab #v3.5.2
+  #     - id: setup-node
+  #       uses: ./.github/actions/setup-composite
+  #     - id: send-notification
+  #       run: 'yarn ts-node --skip-project -O ''{"lib":["es2015"]}'' scripts/ts/notifyNewAppVersion/notifyNewAppVersion.ts'
+  #       env: 
+  #         IO_APP_SLACK_HELPER_BOT_TOKEN: ${{ secrets.IO_APP_SLACK_HELPER_BOT_TOKEN }}
