--- a/.github/actions/setup-composite/action.yml
+++ b/.github/actions/setup-composite/action.yml
@@ -17,11 +17,7 @@ runs:
       with:
         # npm cache files are stored in `~/.npm` on Linux/macOS
         path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
     - id: install-packages
       run: yarn install --frozen-lockfile
       shell: bash
