--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -10,13 +10,11 @@ jobs:
   #  uses: ./.github/workflows/staticcheck.yaml
   build-detox-app:
     #needs: run-static-checks
-    runs-on: macos-13-xlarge
+    runs-on: macos-latest
     concurrency:
       group: ${{ github.workflow }}-e2e-tests-${{ github.ref || github.run_id }}
       cancel-in-progress: true
     steps:
-      - id: set-xcode-version
-        run: sudo xcode-select -s '/Applications/Xcode_14.2.app/Contents/Developer'
       - id: checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
       - id: setup
@@ -63,7 +61,7 @@ jobs:
           retention-days: 2
   run-e2e-tests:    
     needs: build-detox-app
-    runs-on: macos-13-xlarge
+    runs-on: macos-latest
     environment: dev
     strategy: 
       fail-fast: false
@@ -87,8 +85,6 @@ jobs:
           - "ts/features/euCovidCert/__e2e__/euCovidCertRevoked00.e2e"
           - "ts/features/wallet/onboarding/__e2e__/creditCardOnboarding.e2e"
     steps:
-      - id: set-xcode-version
-        run: sudo xcode-select -s '/Applications/Xcode_14.2.app/Contents/Developer'
       - id: install-applesimutils
         run: |
           brew tap wix/brew
