--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,15 +1,16 @@
 name: Run e2e tests
 on:
+  pull_request:
   workflow_dispatch:
   push:
     branches:
       - master
 jobs:
-  run-static-checks:
-   uses: ./.github/workflows/staticcheck.yaml
+  # run-static-checks:
+  #  uses: ./.github/workflows/staticcheck.yaml
   build-detox-app:
-    needs: run-static-checks
-    runs-on: macos-latest
+    # needs: run-static-checks
+    runs-on: macos-12-large
     concurrency:
       group: ${{ github.workflow }}-e2e-tests-${{ github.ref || github.run_id }}
       cancel-in-progress: true
