--- a/.github/workflows/staticcheck.yaml
+++ b/.github/workflows/staticcheck.yaml
@@ -3,7 +3,7 @@ on:
   - workflow_call
 jobs:
   checks:
-    runs-on: ubuntu-latest
+    runs-on: macos-13-large
     concurrency:
       group: ${{ github.workflow }}-pr-staticcheck-${{ github.head_ref || github.run_id }}
       cancel-in-progress: true
