revert mock and set to false failing ENV

--- a/.env.local
+++ b/.env.local
@@ -93,4 +93,4 @@ WALLET_API_BASEURL='http://127.0.0.1:3000'
 # Wallet V3 test/env RESTful API
 WALLET_API_UAT_BASEURL='https://api.uat.platform.pagopa.it'
 # Redesign of the services section
-NEW_SERVICES_ENABLED=YES
+NEW_SERVICES_ENABLED=NO
